--- a/src/public/scss/modules/_navigation.scss
+++ b/src/public/scss/modules/_navigation.scss
@@ -1,5 +1,18 @@
 
 .navbar {
+  background-color: gold;
+  color: black;
+  height: 80px;
+  width: 100%;
+  transition: all 300ms ease-out;
+  position: fixed;
+  top: 0;
+
+  &.navbar--top {
+    background-color: red;
+    height: 50px;
+  }
+
   li {
     display: inline-block;
   }
